--- a/js_basics/js_operators/index.html
+++ b/js_basics/js_operators/index.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Operators in js</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div class="container mt-5">
+      <h2 class="text-center">ARITHEMATIC OPERATORS</h2>
+      <table class="table table-bordered">
+        <tr>
+          <th>Addition (+)</th>
+          <td>Adds two numbers.</td>
+        </tr>
+
+        <tr>
+          <th>Subtraction (-)</th>
+          <td>Subtracts the second number from the first.</td>
+        </tr>
+
+        <tr>
+          <th>Multiplication (*)</th>
+          <td>Multiplies two numbers</td>
+        </tr>
+
+        <tr>
+          <th>Division (/)</th>
+          <td>Divides the first number by the second.</td>
+        </tr>
+
+        <tr>
+          <th>Modulus (%)</th>
+          <td>Returns the remainder of division.</td>
+        </tr>
+
+        <tr>
+          <th>Exponent (**)</th>
+          <td>Raises the first number to the power of the second.</td>
+        </tr>
+      </table>
+    </div>
+
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
