--- a/js_basics/js_operators/index.html
+++ b/js_basics/js_operators/index.html
@@ -46,6 +46,31 @@
         </tr>
       </table>
     </div>
+    <div class="container mt-5">
+      <h2 class="text-center">Increment/Decrement OPERATORS</h2>
+      <table class="table table-bordered">
+        <tr>
+          <th>Post Increment (Increment++)</th>
+          <td>first the actual value is returned then its value is increment.
+          </td>
+        </tr>
+
+        <tr>
+          <th>Pre Increment (++Increment)</th>
+          <td>Increment the value and returns it.</td>
+        </tr>
+
+        <tr>
+          <th>Post Decrement(Decrement--)</th>
+          <td>first the actual value is returned then its value is decrement.</td>
+        </tr>
+
+        <tr>
+          <th>Pre Decrement(--Decrement)</th>
+          <td>Decrement the value and returns it.</td>
+        </tr>
+      </table>
+    </div>
 
     <script src="script.js"></script>
   </body>
