--- a/js_basics/js_operators/index.html
+++ b/js_basics/js_operators/index.html
@@ -71,7 +71,25 @@
         </tr>
       </table>
     </div>
-
+    <div class="container mt-5">
+      <h2 class="text-center">COMPARISON OPERATORS</h2>
+      <table class="table table-bordered">
+        <tr>
+          <th>equal to (==)</th>
+          <td>2</td>
+          <td>2</td>
+          <td>x==y</td>
+          <td>TRUE</td>
+        </tr>
+        <tr>
+          <th>equal value and equal type(===)</th>
+          <td>3</td>
+          <td>3</td>
+          <td>x===y</td>
+          <td>TRUE</td>
+        </tr>
+</table>
+</div>
     <script src="script.js"></script>
   </body>
 </html>
