--- a/js_basics/js_operators/index.html
+++ b/js_basics/js_operators/index.html
@@ -88,6 +88,48 @@
           <td>x===y</td>
           <td>TRUE</td>
         </tr>
+        <tr>
+          <th>not equal(!=)</th>
+          <td>2</td>
+          <td>2</td>
+          <td>x!=y</td>
+          <td>FALSE</td>
+        </tr>
+        <tr>
+          <th>not equal value or not equal type(!==)</th>
+          <td>3</td>
+          <td>2</td>
+          <td>x!==y</td>
+          <td>TRUE</td>
+        </tr>
+        <tr>
+          <th>greater than(>)</th>
+          <td>3</td>
+          <td>2</td>
+          <td>x>y</td>
+          <td>TRUE</td>
+        </tr>
+        <tr>
+        <th>less than(<)</th>
+          <td>3</td>
+          <td>2</td>
+          <td>x <  y</td>
+          <td>FALSE</td>
+        </tr>
+        <tr>
+          <th>greater than or equal to(>=)</th>
+          <td>3</td>
+          <td>2</td>
+          <td>x>=y</td>
+          <td>TRUE</td>
+        </tr>
+        <tr>
+          <th>less than or equal to (<=)</th>
+            <td>3</td>
+            <td>2</td>
+            <td>x <=  y</td>
+            <td>TRUE</td>
+          </tr>
 </table>
 </div>
     <script src="script.js"></script>
