--- a/js_basics/js_operators/index.html
+++ b/js_basics/js_operators/index.html
@@ -132,6 +132,32 @@
           </tr>
 </table>
 </div>
+<div class="container mt-5">
+  <h2 class="text-center">LOGICAL OPERATORS</h2>
+  <table class="table table-bordered">
+    <tr>
+      <th>and (&&)</th>
+      <td>6</td>
+      <td>5</td>
+      <td>x<10  && y>1</td>
+      <td>TRUE</td>
+    </tr>
+    <tr>
+      <th>or (||)</th>
+      <td>4</td>
+      <td>3</td>
+      <td>x==5  || y==5</td>
+      <td>FALSE</td>
+    </tr>
+    <tr>
+      <th>not (!)</th>
+      <td>1</td>
+      <td>4</td>
+      <td>x == y</td>
+      <td>TRUE</td>
+    </tr>
+    </table>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
