--- a/js_basics/conditional_statements/index.html
+++ b/js_basics/conditional_statements/index.html
@@ -6,6 +6,13 @@
     <title>Conditional Stateents</title>
 </head>
 <body>
+    <h3>There are serveral conditional statements in js</h3>
+    <ul>
+        <li>if Statements</li>
+        <li>if-else Statements</li>
+        <li>if-else ladder</li>
+        <li>switch Statements</li>
+    </ul>
     <script src="app.js"></script>
 </body>
 </html>
