--- a/js_basics/js_operators/index.html
+++ b/js_basics/js_operators/index.html
@@ -51,7 +51,8 @@
       <table class="table table-bordered">
         <tr>
           <th>Post Increment (Increment++)</th>
-          <td>first the actual value is returned then its value is increment.
+          <td>
+            first the actual value is returned then its value is increment.
           </td>
         </tr>
 
@@ -62,7 +63,9 @@
 
         <tr>
           <th>Post Decrement(Decrement--)</th>
-          <td>first the actual value is returned then its value is decrement.</td>
+          <td>
+            first the actual value is returned then its value is decrement.
+          </td>
         </tr>
 
         <tr>
@@ -110,10 +113,10 @@
           <td>TRUE</td>
         </tr>
         <tr>
-        <th>less than(<)</th>
+          <th>less than(<)</th>
           <td>3</td>
           <td>2</td>
-          <td>x <  y</td>
+          <td>x < y</td>
           <td>FALSE</td>
         </tr>
         <tr>
@@ -125,38 +128,38 @@
         </tr>
         <tr>
           <th>less than or equal to (<=)</th>
-            <td>3</td>
-            <td>2</td>
-            <td>x <=  y</td>
-            <td>TRUE</td>
-          </tr>
-</table>
-</div>
-<div class="container mt-5">
-  <h2 class="text-center">LOGICAL OPERATORS</h2>
-  <table class="table table-bordered">
-    <tr>
-      <th>and (&&)</th>
-      <td>6</td>
-      <td>5</td>
-      <td>x<10  && y>1</td>
-      <td>TRUE</td>
-    </tr>
-    <tr>
-      <th>or (||)</th>
-      <td>4</td>
-      <td>3</td>
-      <td>x==5  || y==5</td>
-      <td>FALSE</td>
-    </tr>
-    <tr>
-      <th>not (!)</th>
-      <td>1</td>
-      <td>4</td>
-      <td>x == y</td>
-      <td>TRUE</td>
-    </tr>
-    </table>
+          <td>3</td>
+          <td>2</td>
+          <td>x <= y</td>
+          <td>TRUE</td>
+        </tr>
+      </table>
+    </div>
+    <div class="container mt-5">
+      <h2 class="text-center">LOGICAL OPERATORS</h2>
+      <table class="table table-bordered">
+        <tr>
+          <th>and (&&)</th>
+          <td>6</td>
+          <td>5</td>
+          <td>x<10 && y>1</td>
+          <td>TRUE</td>
+        </tr>
+        <tr>
+          <th>or (||)</th>
+          <td>4</td>
+          <td>3</td>
+          <td>x==5 || y==5</td>
+          <td>FALSE</td>
+        </tr>
+        <tr>
+          <th>not (!)</th>
+          <td>1</td>
+          <td>4</td>
+          <td>x == y</td>
+          <td>TRUE</td>
+        </tr>
+      </table>
     </div>
     <script src="script.js"></script>
   </body>
