--- a/js_basics/js_loops/index.html
+++ b/js_basics/js_loops/index.html
@@ -6,6 +6,7 @@
     <title>JS LOOPS</title>
 </head>
 <body>
-    <script src="app.js"></script>
+     <script src="app.js"></script> <!--while loop -->
+     <script src="app2.js"></script> <!-- do-while loop -->
 </body>
 </html>
